Make OsmMapCreator work with OpenJDK 17